# takt

./: .gcloudignore  .gitignore  AGENTS.md  LICENSE  README.md  compose.yaml  prd.md  time-tracking-data-sources_1.html
extension/: manifest.json
extension/admin/: admin.html  admin.js
extension/background/: github-api.js  local-store.js  service-worker.js  sync-queue.js  takt-api.js
extension/content/: github.js
extension/dashboard/: dashboard.css  dashboard.html  dashboard.js
extension/lib/: time-format.js
extension/mytime/: mytime.html  mytime.js
extension/options/: options.html  options.js
extension/popup/: popup.html  popup.js
server/: .env.example  .gitignore  ANALYTICS_API.md  Dockerfile  README.md  cloudbuild.yaml  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 2a8cd57de876_enforce_transactional_invariants.py  54732d95c12b_create_transactional_schema.py  79612f0cd15e_unify_time_entry_reporting_model.py  eee273252511_map_clients_through_projects.py
server/app/: auth.py  config.py  db.py  db_models.py  errors.py  exporter.py  main.py  models.py
server/app/routes/: admin.py  analytics.py  clients.py  me.py  projects.py  sessions.py
server/app/services/: analytics.py  bq.py  github.py  store.py
server/scripts/: bootstrap.sh  bootstrap_postgres.py  export_bigquery.py  migrate_bq_to_postgres.py  provision.sh  provision_postgres.sh  reconcile_postgres_bigquery.py  schedule_export.sh  sync_projects.py
server/tests/: conftest.py  test_bigquery_contract.py  test_exporter.py  test_postgres.py  test_smoke.py
(+1 files in other folders)
